feat: Phase 3-5 implementation - New pages, testing, and UI polish
Phase 3 - New Pages:
- Implemented Reports page with Recharts visualizations
- Implemented Goals page with CRUD functionality
- Implemented Profile page with user info and org management
- Added navigation links in AppLayout

Phase 4 - Testing:
- Configured Vitest and MSW for unit testing
- Created unit tests for hooks (useAuth, useOrganization, useFinancialData)
- Created unit tests for components (SummaryCards, RecentTransactions)
- All 18 tests passing successfully

Phase 5 - Refinement:
- Fixed padding consistency across all routes
- Updated README with testing instructions and new features
- Removed obsolete VITE_DEMO_MODE environment variable
- Documented demo mode activation via email

Core Changes:
- Enhanced useAuth with demo mode detection
- Created useOrganization hook for multi-org support
- Refactored useFinancialData for real API integration
- Added analytics library for frontend data processing
- Added goals-storage library for MVP goal management
- Improved SummaryCards and RecentTransactions with loading/empty states

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "check": "tsc"
+    "check": "tsc",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:unit": "vitest run --reporter=verbose",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -69,14 +74,21 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "20.16.11",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/ui": "^4.0.10",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^27.2.0",
+    "msw": "^2.12.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vitest": "^4.0.10"
   }
 }
